--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,11 @@ jobs:
 
       - name: Install
         run: npm install
+        working-directory: ./www
 
       - name: Build
         run: npm run build
+        working-directory: ./www
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
