--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,10 @@ jobs:
           node-version: 14
 
       - name: Install
-        run: cd www && npm install
+        run: cd ./www && npm install
 
       - name: Build
-        run: cd www && npm run build
+        run: cd ./www && npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
