--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,8 @@ jobs:
           node-version: 14
 
       - name: Install
-        run: cd ./www && npm install
+        run: npm install
+        working-directory: ./www
 
       - name: Build
         run: cd ./www && npm run build
